--- a/challenge011.html
+++ b/challenge011.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tugas 1</title>
+
+    <link rel="stylesheet" href="style007.css">
+
 </head>
 <body>
 
-    <h1>📘 The Code Magazine</h1>
+    <h1 class="main-header">📘 The Code Magazine</h1>
+
+    <p>test paragraphs</p>
 
     <div>
         <a href="tugas1.html">Blog</a>
@@ -25,7 +30,7 @@
  width="50"
  />
 
-<p>Posted by <strong> Laura Jones </strong> on Monday, June 21st 2027</p>
+<p id="author">Posted by <strong> Laura Jones </strong> on Monday, June 21st 2027</p>
 
 <img src="img/post-img.jpg"
  alt="HTML code on a screen"
@@ -63,23 +68,29 @@
 </ul>
 <p>Hopefully you learned something new here. See you next time!</p>
 
-<div>
+<aside>
 <h4>Related posts</h4>
-<ul>
+<ul class="related">
     <li>
         <img src="img/related-1.jpg" alt="" width="75" height="75"> <a href="#">How to Learn Web Development</a>
-        <p>By Jonas Schmedtmann</p>
+        <p class="related-author" >By Jonas Schmedtmann</p>
     </li>
     <li>
         <img src="img/related-2.jpg" alt="" width="75" height="75"> <a href="#">The Unknown Powers of CSS</a>
-        <p>by Jim Dillon</p>
+        <p class="related-author">by Jim Dillon</p>
     </li>
     <li>
         <img src="img/related-3.jpg" alt="" width="75" height="75"> <a href="#">Why JavaScript is Awesome</a>
-        <p>by Matilda</p>
+        <p class="related-author">by Matilda</p>
     </li>
 </ul>
-</div> 
+</aside> 
+
+<footer>
+
+    <p id="copyright">copyright &copy; 2023 by The Code Magazine X NeXOryuzu</p>
+
+</footer>
 
 </body>
 </html>
